--- a/Boolean model/index.html
+++ b/Boolean model/index.html
@@ -6,8 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="vue.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
+    
+
+    <script ></script>
 </head>
 <body>
-    
+<div>{{message}}</div>
 </body>
 </html>
+
+<script>
+    let app = new Vue({
+    el: '#app',
+    data: {
+        message: 'Hello Vue!'
+    }
+    })
+</script>
