--- a/Boolean model/index.html
+++ b/Boolean model/index.html
@@ -105,7 +105,7 @@
                                     <v-flex mt-4>
                                         <div class="display-2">Query Results</div>
                                         <div v-for="item in result">
-                                            <h3>{{item}}</h3>
+                                            <span>         </span><h3>{{item}}</h3>
                                         </div>
                                     </v-flex>
                             </v-layout>
@@ -182,6 +182,7 @@
             //a function to return a new array with no duplicates
             getUniqueTerms : a => [...new Set(a)],
             Query : function(){
+                this.result = []
                 this.QueryText = this.QueryText.toLowerCase()
                 let QueryParsed = this.QueryText.split(' ')
                 let keys = ['or','and','not','andor','andnot']
@@ -192,6 +193,7 @@
                         if(el=='and'){return "&"}
                         else if(el=='or'){return "|"}
                         else if(el == 'not'){return '~'}
+                        else if(el == 'andnot'){return '&~'}
                     }else{
                         let bits = this.incidenceMatrix.find((row)=> row[0]==el).slice(1)
                         let str = ''
@@ -205,6 +207,10 @@
                         str+=el
                     })
                     let result = eval(str).toString(2)
+                    while(result.length<this.Documents.length){
+                        result = "0" + result
+                    }
+                    this.result.push(result)
                 console.log(result)
             }
          }
