--- a/Vector space model/index.html
+++ b/Vector space model/index.html
@@ -1,150 +1,170 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link href='../assets/fonts/Icons.css' rel="stylesheet">
-  <link href="../assets/css/vuetify.min.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <link href='../assets/fonts/Icons.css' rel="stylesheet">
+    <link href="../assets/css/vuetify.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
+
 <body>
     <v-app id="app">
         <v-container>
             <v-layout row wrap align-center style="justify-content: center;align-items:center;">
-                    <v-flex xs6 class="text-xs-center">
-                            <v-form v-model="form">
-                                <v-flex mt-4>
+                <v-flex xs6 class="text-xs-center">
+                    <v-form v-model="form">
+                        <v-flex mt-4>
+                        </v-flex>
+                        <v-flex mat4>
+                            <v-textarea v-model="CurrentDocumentContent" auto-grow box :rules="DocumentContentRule"
+                                color="deep-purple" label="Document text" rows="2"></v-textarea>
+                        </v-flex>
+                        <v-flex mt-3>
+                            <v-btn class="red" dark large @click="handleNewDoc()">
+                                Add Document
+                            </v-btn>
+                        </v-flex>
+                    </v-form>
+                </v-flex>
+                <v-flex xs12></v-flex>
+                <v-flex xs6 class="text-xs-center">
+                    <div class="font-weight-thin display-3 mb-2 mt-2">Documents</div>
+                    <v-flex v-if="!Documents.length" class="font-weight-thin display-1">No Documents to Show</v-flex>
+                    <v-flex v-else>
+                        <template v-for="(item,i) in this.Documents">
+                            <v-card class="red lighten-4">
+                                <v-flex class="ma-2">
+                                    <div class="display-2">{{item.Name}}</div>
+                                    <v-list-tile>
+                                        <v-list-tile-content>
+                                            {{item.Content}}
+                                        </v-list-tile-content>
+                                    </v-list-tile>
                                 </v-flex>
-                                   <v-flex mat4>
-                                        <v-textarea
-                                        v-model="CurrentDocumentContent"
-                                        auto-grow
-                                        box
-                                        :rules = "DocumentContentRule"
-                                        color="deep-purple"
-                                        label="Document text"
-                                        rows="2"
-                                    ></v-textarea>
-                                   </v-flex>
-                                   <v-flex mt-3>
-                                   <v-btn
-                                        class= "red"
-                                        dark
-                                        large
-                                        @click="handleNewDoc()"
-                                        >
-                                        Add Document
-                                        </v-btn>
-                                        <v-btn
-                                        class= "black"
-                                        dark
-                                        large
-                                        :rules = "generateIncidenceMatrixRule"
-                                        @click="generateIncidenceMatrix()"
-                                        >
-                                        Generate Incidenece Matrix
-                                        </v-btn>
-                                   </v-flex>
-                            </v-form>
-                        </v-flex>
-                        <v-flex xs12></v-flex>
-                        <v-flex xs6 class="text-xs-center">
-                            <div class="font-weight-thin display-3 mb-2 mt-2">Documents</div>
-                            <v-flex v-if="!Documents.length" class="font-weight-thin display-1">No Documents to Show</v-flex>
-                            <v-flex v-else>
-                                            <template  v-for= "(item,i) in this.Documents">
-                                                <v-card class="red lighten-4">
-                                                        <v-flex class="ma-2">
-                                                                <div class="display-2">{{item.Name}}</div>
-                                                                <v-list-tile >
-                                                              <v-list-tile-content>
-                                                                  {{item.Content}}
-                                                                  </v-list-tile-content>    
-                                                                </v-list-tile>
-                                                        </v-flex>
-                                                </v-card>
-                                                </template>
-                            </v-flex>
-                            </div>
-                        </v-flex>
-                        <v-flex xs12></v-flex>
-
+                            </v-card>
+                        </template>
+                    </v-flex>
+                    </div>
+                </v-flex>
+                <v-flex xs12></v-flex>
+                <v-flex mt-3 class="text-xs-center">
+                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
+                        Generate idf
+                    </v-btn>
+                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
+                        Generate tf
+                    </v-btn>
+                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
+                        Generate tf*idf
+                    </v-btn>
+                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
+                        Generate sim
+                    </v-btn>
+                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
+                        Generate cossim
+                    </v-btn>
+                </v-flex>
+                <v-flex xs12></v-flex>
+                <v-flex xs12></v-flex>
+                <div class="font-weight-thin display-3 mb-2 mt-2">Enter Query</div>
+                <v-flex xs12></v-flex>
+                <v-flex xs6 class="text-xs-center">
+                    <v-text-field @change="" v-model="QueryText" label="Enter a Query" :rules="QueryRule" clearable
+                        auto-grow box mt-4></v-text-field>
+                </v-flex>
+                <v-flex xs12></v-flex>
+                <v-flex xs6 class="text-xs-center">
+                    <v-btn class="Blue" dark large @click="Query">
+                        Go
+                    </v-btn>
+                </v-flex>
+                <v-flex xs12></v-flex>
+                <v-flex xs6 class="text-xs-center">
+                    <div class="display-2">Query Results</div>
+                    <div v-for="item in result">
+                        <span> </span>
+                        <h3>{{item}}</h3>
+                    </div>
+                </v-flex>
             </v-layout>
-                   
+
+
         </v-container>
 
     </v-app>
- 
-  <script src="../assets/js/vue.js"></script>
-  <script src="../assets/js/vuetify.js"></script>
-  <script>
-    new Vue({
-         el: '#app',
-         data(){
-             return {
-                    form:true,
-                    CurrentDocumentContent:'',
-                    incidenceMatrix:[],
-                    bagOfWords:[],
-                    matched : [],
-                    headers:[],
-                    result:[],
-                    Documents : [
-                    ],
-                    QueryText:'',
-                    QueryRule:[v => !! v || 'A Query is required'],
 
-                    DocumentContentRule :[
+    <script src="../assets/js/vue.js"></script>
+    <script src="../assets/js/vuetify.js"></script>
+    <script>
+        new Vue({
+            el: '#app',
+            data() {
+                return {
+                    form: true,
+                    CurrentDocumentContent: '',
+                    incidenceMatrix: [],
+                    bagOfWords: [],
+                    matched: [],
+                    headers: [],
+                    result: [],
+                    Documents: [],
+
+                    QueryText: '',
+                    QueryRule: [
+                        v => !!v || 'A Query is required'],
+
+                    DocumentContentRule: [
                         v => !!v || 'Some content is required',
-                        v => (v && v.length >= 5) || 'Document content must be more than 10 characters' 
-                    ],
-                    generateIncidenceMatrixRule :[]
-             }
-         },
-         methods : {
-            handleNewDoc : function(){
-                let Content = this.CurrentDocumentContent
-                //this returns new array with terms not including stop words
-                let DocumentWithoutStopwords = this.removeStopWords(Content.toLowerCase().split(' '))
-                //getting every term out of the array and inserting into bag of words
-                DocumentWithoutStopwords.forEach((term)=>this.bagOfWords.push(term))
-                //remove duplicate terms
-                this.Documents.push({
+                        v => (v && v.length >= 5) || 'Document content must be more than 10 characters'
+                    ]
+                }
+            },
+            methods: {
+                handleNewDoc: function () {
+                    let Content = this.CurrentDocumentContent
+                    //this returns new array with terms not including stop words
+                    let DocumentWithoutStopwords = this.removeStopWords(Content.toLowerCase().split(' '))
+                    //getting every term out of the array and inserting into bag of words
+                    DocumentWithoutStopwords.forEach((term) => this.bagOfWords.push(term))
+                    //remove duplicate terms
+                    this.Documents.push({
                         //Name: this.CurrentDocumentName,
-                        Name:`Doc ${this.Documents.length+1}`,
+                        Name: `Doc ${this.Documents.length+1}`,
                         Content: this.CurrentDocumentContent
                     })
-               // this.CurrentDocumentName = ''
-                this.CurrentDocumentContent = ''
-            },
-            //a function to return new array of all the words so far from documents without Stop words
-            removeStopWords  : Document => Document.filter( term => stopwords.includes(term) !=true ),
-            //a function to return a new array with no duplicates
-            getUniqueTerms : a => [...new Set(a)]
-         }
-    })
-  </script>
-  <script>
-      let stopwords = [
-        "a", "about", "above", "after", "again", "against", "all",
-       "am", "an", "and", "any","are","aren't","as","at","be","because"
-       ,"been","before","being","below","between","both","but","by"
-       ,"can't","cannot","could","couldn't","did","didn't","do","does"
-       ,"doesn't","doing","don't","down","during","each","few","for"
-       ,"from","further","had","hadn't","has","hasn't","have","haven't"
-       ,"having","he","he'd","he'll","he's","her","here","here's","hers"
-       ,"herself","him","himself","his","how","how's","i","i'd","i'll","i'm"
-       ,"i've","if","in","into","is","isn't","it","it's","its","itself","let's","me"
-       ,"more","most","mustn't","my","myself","no","nor","not","of",
-       "off","on","once","only","or","other","ought","our","ours",
-       "ourselves","out","over","own","same","shan't","she",
-       "she'd","she'll","she's","should","shouldn't","so","some",
-       "such","than","that","that's","the","their","theirs","them",
-       "themselves","then","there","there's","these","they","they'd",
-       "they'll","they're","they've","this","those","through","to","too",
-       "under","until","up","very","was","wasn't","we","we'd","we'll",
-       "we're","we've","were","weren't","what","what's","when","when's",
-       "where","where's","which","while","who","who's","whom","why",
-       "why's","with","won't","would","wouldn't","you","you'd","you'll",
-       "you're","you've","your","yours","yourself","yourselves"," "]
-  </script>
+                    // this.CurrentDocumentName = ''
+                    this.CurrentDocumentContent = ''
+                },
+                //a function to return new array of all the words so far from documents without Stop words
+                removeStopWords: Document => Document.filter(term => stopwords.includes(term) != true),
+                //a function to return a new array with no duplicates
+                getUniqueTerms: a => [...new Set(a)]
+            }
+        })
+    </script>
+    <script>
+        let stopwords = [
+            "a", "about", "above", "after", "again", "against", "all",
+            "am", "an", "and", "any", "are", "aren't", "as", "at", "be", "because", "been", "before", "being",
+            "below", "between", "both", "but", "by", "can't", "cannot", "could", "couldn't", "did", "didn't", "do",
+            "does", "doesn't", "doing", "don't", "down", "during", "each", "few", "for", "from", "further", "had",
+            "hadn't", "has", "hasn't", "have", "haven't", "having", "he", "he'd", "he'll", "he's", "her", "here",
+            "here's", "hers", "herself", "him", "himself", "his", "how", "how's", "i", "i'd", "i'll", "i'm", "i've",
+            "if", "in", "into", "is", "isn't", "it", "it's", "its", "itself", "let's", "me", "more", "most",
+            "mustn't", "my", "myself", "no", "nor", "not", "of",
+            "off", "on", "once", "only", "or", "other", "ought", "our", "ours",
+            "ourselves", "out", "over", "own", "same", "shan't", "she",
+            "she'd", "she'll", "she's", "should", "shouldn't", "so", "some",
+            "such", "than", "that", "that's", "the", "their", "theirs", "them",
+            "themselves", "then", "there", "there's", "these", "they", "they'd",
+            "they'll", "they're", "they've", "this", "those", "through", "to", "too",
+            "under", "until", "up", "very", "was", "wasn't", "we", "we'd", "we'll",
+            "we're", "we've", "were", "weren't", "what", "what's", "when", "when's",
+            "where", "where's", "which", "while", "who", "who's", "whom", "why",
+            "why's", "with", "won't", "would", "wouldn't", "you", "you'd", "you'll",
+            "you're", "you've", "your", "yours", "yourself", "yourselves", " "
+        ]
+    </script>
 </body>
+
 </html>
