clean up and adding stemmer (PorterStemmer1980)

--- a/Boolean model/index.html
+++ b/Boolean model/index.html
@@ -116,6 +116,8 @@
         </v-container>
 
     </v-app>
+</body>
+</html>
  
   <script src="../assets/js/vue.js"></script>
   <script src="../assets/js/vuetify.js"></script>
