--- a/Vector space model/index.html
+++ b/Vector space model/index.html
@@ -48,23 +48,35 @@
                 </v-flex>
                 <v-flex xs12></v-flex>
                 <v-flex mt-3 class="text-xs-center">
-                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
-                        Generate idf
+                    <v-btn class="black" dark large @click="calc_IDF()">
+                        Calculate idf
                     </v-btn>
-                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
-                        Generate tf
+                    <v-btn class="black" dark large @click="">
+                        Calculate tf
                     </v-btn>
-                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
-                        Generate tf*idf
-                    </v-btn>
-                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
-                        Generate sim
-                    </v-btn>
-                    <v-btn class="black" dark large :rules="generateIncidenceMatrixRule" @click="generateIncidenceMatrix()">
-                        Generate cossim
+                    <v-btn class="black" dark large @click="">
+                        Calculate tf*idf
                     </v-btn>
                 </v-flex>
                 <v-flex xs12></v-flex>
+                <v-flex xs6 class="text-xs-center">
+                    <div class="font-weight-thin display-3 mb-2 mt-2">IDF For Each Word</div>
+                    <v-flex v-if="!idfCalc" class="font-weight-thin display-1">IDFs not Calculated</v-flex>
+                    <v-flex v-else>
+                        <template v-for="(item,i) in this.wordsList">
+                            <v-card class="blue lighten-4">
+                                <v-flex class="ma-2">
+                                    <v-list-tile>
+                                        <v-list-tile-content>
+                                            {{item.termName}} idf = log10({{Documents.length}}/{{item.termDublications}}) = {{item.idf}}
+                                        </v-list-tile-content>
+                                    </v-list-tile>
+                                </v-flex>
+                            </v-card>
+                        </template>
+                    </v-flex>
+                    </div>
+                </v-flex>
                 <v-flex xs12></v-flex>
                 <div class="font-weight-thin display-3 mb-2 mt-2">Enter Query</div>
                 <v-flex xs12></v-flex>
@@ -74,7 +86,7 @@
                 </v-flex>
                 <v-flex xs12></v-flex>
                 <v-flex xs6 class="text-xs-center">
-                    <v-btn class="Blue" dark large @click="Query">
+                    <v-btn class="Blue" dark large @click="">
                         Go
                     </v-btn>
                 </v-flex>
@@ -86,6 +98,16 @@
                         <h3>{{item}}</h3>
                     </div>
                 </v-flex>
+                <v-flex xs12></v-flex>
+                <v-flex mt-3 class="text-xs-center">
+                    <v-btn class="black" dark large @click="">
+                        Calculate sim
+                    </v-btn>
+                    <v-btn class="black" dark large @click="">
+                        Calculate cossim
+                    </v-btn>
+                </v-flex>
+                <v-flex xs12></v-flex>
             </v-layout>
 
 
@@ -102,16 +124,18 @@
                 return {
                     form: true,
                     CurrentDocumentContent: '',
-                    incidenceMatrix: [],
-                    bagOfWords: [],
-                    matched: [],
-                    headers: [],
-                    result: [],
-                    Documents: [],
-
                     QueryText: '',
+                    idfCalc: false,
+                    tfCalc: false,
+                    tdidfCalc: false,
+
+                    wordsList: [],
+                    Documents: [],
+                    result: [],
+                    
                     QueryRule: [
-                        v => !!v || 'A Query is required'],
+                        v => !!v || 'A Query is required'
+                    ],
 
                     DocumentContentRule: [
                         v => !!v || 'Some content is required',
@@ -121,49 +145,39 @@
             },
             methods: {
                 handleNewDoc: function () {
-                    let Content = this.CurrentDocumentContent
-                    //this returns new array with terms not including stop words
-                    let DocumentWithoutStopwords = this.removeStopWords(Content.toLowerCase().split(' '))
-                    //getting every term out of the array and inserting into bag of words
-                    DocumentWithoutStopwords.forEach((term) => this.bagOfWords.push(term))
-                    //remove duplicate terms
+                    //Add to Documents
                     this.Documents.push({
-                        //Name: this.CurrentDocumentName,
                         Name: `Doc ${this.Documents.length+1}`,
                         Content: this.CurrentDocumentContent
                     })
+                    //this returns new array with terms
+                    let DocumentWords = this.CurrentDocumentContent.toLowerCase().split(' ')
+                    //getting every term out of the array and inserting into bag of words and count dublications
+                    DocumentWords.forEach((term) => {
+                        let found = false
+                        for(var i = 0; i < this.wordsList.length; i++) {
+                            if (this.wordsList[i].termName == term) {
+                                found = true
+                                ++this.wordsList[i].termDublications
+                                break
+                            }
+                        }
+                        if (!found) this.wordsList.push({termName:term,termDublications:1,idf:0})
+                    })
                     // this.CurrentDocumentName = ''
                     this.CurrentDocumentContent = ''
+                    console.log(this.wordsList)
                 },
-                //a function to return new array of all the words so far from documents without Stop words
-                removeStopWords: Document => Document.filter(term => stopwords.includes(term) != true),
-                //a function to return a new array with no duplicates
-                getUniqueTerms: a => [...new Set(a)]
+                calc_IDF: function () {
+                    let N = this.Documents.length
+                    this.wordsList.forEach((term) => {
+                        term.idf = Math.log10(N/term.termDublications).toFixed(3)
+                    })
+                    this.idfCalc = true
+                    console.log(this.wordsList)
+                }
             }
         })
-    </script>
-    <script>
-        let stopwords = [
-            "a", "about", "above", "after", "again", "against", "all",
-            "am", "an", "and", "any", "are", "aren't", "as", "at", "be", "because", "been", "before", "being",
-            "below", "between", "both", "but", "by", "can't", "cannot", "could", "couldn't", "did", "didn't", "do",
-            "does", "doesn't", "doing", "don't", "down", "during", "each", "few", "for", "from", "further", "had",
-            "hadn't", "has", "hasn't", "have", "haven't", "having", "he", "he'd", "he'll", "he's", "her", "here",
-            "here's", "hers", "herself", "him", "himself", "his", "how", "how's", "i", "i'd", "i'll", "i'm", "i've",
-            "if", "in", "into", "is", "isn't", "it", "it's", "its", "itself", "let's", "me", "more", "most",
-            "mustn't", "my", "myself", "no", "nor", "not", "of",
-            "off", "on", "once", "only", "or", "other", "ought", "our", "ours",
-            "ourselves", "out", "over", "own", "same", "shan't", "she",
-            "she'd", "she'll", "she's", "should", "shouldn't", "so", "some",
-            "such", "than", "that", "that's", "the", "their", "theirs", "them",
-            "themselves", "then", "there", "there's", "these", "they", "they'd",
-            "they'll", "they're", "they've", "this", "those", "through", "to", "too",
-            "under", "until", "up", "very", "was", "wasn't", "we", "we'd", "we'll",
-            "we're", "we've", "were", "weren't", "what", "what's", "when", "when's",
-            "where", "where's", "which", "while", "who", "who's", "whom", "why",
-            "why's", "with", "won't", "would", "wouldn't", "you", "you'd", "you'll",
-            "you're", "you've", "your", "yours", "yourself", "yourselves", " "
-        ]
     </script>
 </body>
 
