--- a/Vector space model/index.html
+++ b/Vector space model/index.html
@@ -121,26 +121,66 @@
                 </v-flex>
                 <v-flex xs12></v-flex>
                 <v-flex xs6 class="text-xs-center">
-                    <v-btn class="Blue" dark large @click="">
+                    <v-btn class="Blue" dark large @click="calc_TF_IDFQuery()">
                         Go
                     </v-btn>
                 </v-flex>
                 <v-flex xs12></v-flex>
                 <v-flex xs6 class="text-xs-center">
-                    <div class="display-2">Query Results</div>
-                    <div v-for="item in result">
-                        <span> </span>
-                        <h3>{{item}}</h3>
+                    <div class="font-weight-thin display-3 mb-2 mt-2">TF*IDF For Each Query Word</div>
+                    <v-flex v-if="!tfidfqueryex" class="font-weight-thin display-1">TF*IDF not Calculated</v-flex>
+                    <v-flex v-else>
+                        <template v-for="(item,i) in this.tfidfquery">
+                            <v-card class="blue lighten-4">
+                                <v-flex class="ma-2">
+                                    <v-list-tile>
+                                        <v-list-tile-content>
+                                            {{item.termName}} TF*IDF = {{item.termDublications}} * {{item.termidf}} =
+                                            {{item.tfidf}}
+                                        </v-list-tile-content>
+                                    </v-list-tile>
+                                </v-flex>
+                            </v-card>
+                        </template>
+                    </v-flex>
                     </div>
                 </v-flex>
                 <v-flex xs12></v-flex>
                 <v-flex mt-3 class="text-xs-center">
-                    <v-btn class="black" dark large @click="">
+                    <v-btn class="black" dark large @click="calc_sim()">
                         Calculate sim
                     </v-btn>
-                    <v-btn class="black" dark large @click="">
+                    <v-btn class="black" dark large @click="calc_cosSim()">
                         Calculate cossim
                     </v-btn>
+                </v-flex>
+                <v-flex xs12></v-flex>
+                <v-flex xs6 class="text-xs-center">
+                    <div class="font-weight-thin display-3 mb-2 mt-2">lengths</div>
+                    <v-flex v-if="!simex" class="font-weight-thin display-1">sim() not Calculated</v-flex>
+                    <v-flex v-else>
+                        <v-card class="blue lighten-4">
+                            <v-flex class="ma-2">
+                                <v-list-tile>
+                                    <v-list-tile-content>
+                                       length of q = {{this.sim[0]}}
+                                    </v-list-tile-content>
+                                </v-list-tile>
+                            </v-flex>
+                        </v-card>
+                        <template v-for="(item,i) in this.sim">
+                            <v-card v-if="i != 0" class="blue lighten-4">
+                                <v-flex class="ma-2">
+                                    <v-list-tile>
+                                        <v-list-tile-content>
+                                            length of D{{i}} = {{item}}
+                                        </v-list-tile-content>
+                                    </v-list-tile>
+                                </v-flex>
+                            </v-card>
+                        </template>
+                    </v-flex>
+                    </div>
                 </v-flex>
                 <v-flex xs12></v-flex>
             </v-layout>
@@ -163,6 +203,9 @@
                     idfCalc: false,
                     tfvectorex: false,
                     tfidfvectorex: false,
+                    tfidfqueryex: false,
+                    simex: false,
+                    cossimex: false,
 
                     wordsList: [],
                     Documents: [],
@@ -170,7 +213,10 @@
                     result: [],
                     tfvector: [],
                     tfidfvector: [],
-                    
+                    tfidfquery: [],
+                    sim: [],
+                    cossim: [],
+
                     QueryRule: [
                         v => !!v || 'A Query is required'
                     ],
@@ -254,15 +300,66 @@
                         for (let wordid = 0; wordid < this.wordsList.length; wordid++) {
                             if (this.Documents[docid].Content.toLowerCase().includes(this.wordsList[wordid]
                                     .termName)) {
-                                this.tfidfvector[wordid][docid] = this.tfvector[wordid][docid]*this.wordsList[wordid].idf
+                                this.tfidfvector[wordid][docid] = this.tfvector[wordid][docid] * this.wordsList[
+                                    wordid].idf
                             } else {
                                 this.tfidfvector[wordid][docid] = 0
                             }
                         }
                     }
-                    console.log(this.tfidfvectorex)
+                    console.log(this.tfidfvector)
                     this.tfidfvectorex = true
-                }
+                },
+                calc_TF_IDFQuery: function () {
+                    Querywords = this.QueryText.toLowerCase().split(' ')
+                    Querywords.forEach((term) => {
+                        let found = false
+                        for (var i = 0; i < this.tfidfquery.length; i++) {
+                            if (this.tfidfquery[i].termName == term) {
+                                found = true
+                                    ++this.tfidfquery[i].termDublications
+                                break
+                            }
+                        }
+                        if (!found) {
+                            let termid = -1
+                            termid = this.wordsList.findIndex(x => x.termName == term)
+                            this.tfidfquery.push({
+                                termidf: this.wordsList[termid].idf,
+                                termName: term,
+                                termDublications: 1,
+                                tfidf: 0
+                            })
+                        }
+                    })
+                    this.tfidfquery.forEach((term) => {
+                        term.tfidf = term.termDublications * term.termidf
+                    })
+                    console.log(this.tfidfquery)
+                    this.tfidfqueryex = true
+                },
+                calc_sim: function () {
+                    let querysums = 0;
+                    this.tfidfquery.forEach((term) => {
+                        querysums += Math.pow(term.tfidf, 2)
+                    })
+                    this.sim.push(Math.sqrt(querysums).toFixed(3))
+
+                    for (let col = 0; col < this.tfidfvector[0].length; col++) {
+                        let docsums = 0;
+                        for (let row = 0; row < this.tfidfvector.length; row++) {
+                            if (!this.tfidfvector[row][col] == 0) {
+                                docsums += Math.pow(this.tfidfvector[row][col], 2)
+                            }
+                        }
+                        this.sim.push(Math.sqrt(docsums).toFixed(3))
+                    }
+                    console.log(this.sim)
+                    this.simex = true
+                },
+                calc_cosSim: function () {
+
+                },
             }
         })
     </script>
